--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
       </section>
     </main>
   </body>
-  <script src="/scripts/script.js"></script>
+  <script src="scripts/script.js"></script>
 </html>
