Add Finish and Empty

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         </div>
       </section>
     </main>
+    <div class="finish--active finish--inactive">
+      <h1 class="finish-title">Finish</h1>
+      <button class="finish__button--inactive-js">Okay</button>
+    </div>
+    <div class="empty--active empty--inactive">
+      <h1 class="empty-title">Fill in at least one of the fields(numbers)</h1>
+      <button class="empty__button--inactive-js">Okay</button>
+    </div>
   </body>
   <script src="scripts/script.js"></script>
 </html>
